Fixed h1 footer spacing

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ body::before {
 
 /* Header Section */
 header {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.05rem;
 }
 
 h1, h2, h3 {
